syntax = "proto3";

package resources.users;

import "buf/validate/validate.proto";
import "resources/file/file.proto";
import "resources/jobs/jobs.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/labels.proto";
import "tagger/tagger.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/users;users";

message UserProps {
  int32 user_id = 1 [(buf.validate.field).int32.gte = 0];
  optional resources.timestamp.Timestamp updated_at = 2;
  optional bool wanted = 3;
  optional string job_name = 4 [(tagger.tags) = "alias:\"job\""];
  optional resources.jobs.Job job = 5;
  optional int32 job_grade_number = 6 [(tagger.tags) = "alias:\"job_grade\""];
  optional resources.jobs.JobGrade job_grade = 7;
  optional uint32 traffic_infraction_points = 8;
  optional resources.timestamp.Timestamp traffic_infraction_points_updated_at = 9;
  optional int64 open_fines = 10;
  optional string blood_type = 11;
  optional int64 mugshot_file_id = 12;
  optional resources.file.File mugshot = 13 [(tagger.tags) = "alias:\"mugshot\""];
  optional Labels labels = 14;
  // @sanitize: method=StripTags
  optional string email = 15 [(buf.validate.field).string = {
    min_len: 6
    max_len: 80
  }];
}
